// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagSelector default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="Container-flex"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootAuto OutlinedInput-rootMedium PicassoTagSelectorInput-inputBase MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            aria-autocomplete="list"
            autocomplete="none"
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            placeholder="Please select..."
            style="width: auto;"
            type="text"
            value=""
          />
          <div
            class="MuiInputAdornment-root InputAdornment-root OutlinedInput-resetButton MuiInputAdornment-positionEnd"
          >
            <button
              class="MuiButtonBase-root PicassoButton-circular PicassoButton-medium PicassoButton-transparent PicassoButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
              >
                <svg
                  class="SvgCloseMinor16-root PicassoButton-icon"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`TagSelector preselected value 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="Autocomplete-root Autocomplete-rootAuto"
        role="combobox"
      >
        <div
          class="Container-flex"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootAuto OutlinedInput-rootMedium PicassoTagSelectorInput-inputBase MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          >
            <div
              class="MuiChip-root PicassoLabel-root TagSelector-label MuiChip-deletable"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiChip-label"
              >
                <span
                  class="PicassoLabel-innerLabel"
                >
                  Afghanistan
                </span>
              </span>
              <span
                aria-label="delete icon"
                class="PicassoLabel-deleteIcon MuiChip-deleteIcon"
                role="button"
              >
                <svg
                  class="SvgCloseMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                  />
                </svg>
              </span>
            </div>
            <input
              aria-autocomplete="list"
              autocomplete="none"
              class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
              type="text"
              value=""
            />
            <div
              class="MuiInputAdornment-root InputAdornment-root OutlinedInput-resetButton MuiInputAdornment-positionEnd"
            >
              <button
                class="MuiButtonBase-root PicassoButton-circular PicassoButton-medium PicassoButton-transparent PicassoButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="Container-centerAlignItems Container-flex Container-inline PicassoButton-content"
                >
                  <svg
                    class="SvgCloseMinor16-root PicassoButton-icon"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <div
          role="listbox"
        />
      </div>
    </div>
  </div>
</body>
`;
